--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Smart phones for sale">
         <meta name="keywords" content="Smart,Phones,Electronics,devices">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <link rel = "stylesheet" type="text/css" href="loginStyle.css">
+        <link rel = "stylesheet" type="text/css" href="registerStyle.css">
 
 
     </head>
@@ -21,14 +21,21 @@
             <form>
                 <!-- The name -->
                 <label for="uName">Name:</label><br>
-                <input type = "text" id = "uName" name = "uName" placeholder="Enter name"><br>
+                <input type = "text" id = "uName" name = "uName" placeholder="Enter Name"><br>
+
+                <!-- The email -->
+                <label for="email">Email:</label><br>
+                <input type = "email" id = "email" name = "email" placeholder= "Enter Email"><br>
+
                 <!-- The password -->
                 <label for="password">Password:</label><br>
-                <input type = "password" id = "password" name = "password" placeholder="Enter password"><br>
+                <input type = "password" id = "password" name = "password" placeholder="Enter Password"><br>
+
                 <!-- The password again -->
                 <label for="rePassword">Password again:</label><br>
-                <input type = "password" id = "rePassword" name = "rePassword" placeholder="Enter password again"><br>
+                <input type = "password" id = "rePassword" name = "rePassword" placeholder="Enter Password"><br>
 
+                <!-- The register button -->
                 <input type = "submit" id = "regBtn" name = "regBtn" value = "Sign-up"><br>
 
                 <a href ="#">Forgot Password?</a><br>
