--- a/register.html
+++ b/register.html
@@ -18,7 +18,7 @@
         <div class = "regbox">
             <img src="images/avatar.png" class="avatar">
             <h1>Register Here</h1>
-            <form>
+            <form method="POST" action="registerVerify.php">
                 <!-- The name -->
                 <label for="uName">Name:</label><br>
                 <input type = "text" id = "uName" name = "uName" placeholder="Enter Name"><br>
@@ -39,7 +39,7 @@
                 <input type = "submit" id = "regBtn" name = "regBtn" value = "Sign-up"><br>
 
                 <a href ="#">Forgot Password?</a><br>
-                <a href="#">Don't have an account?</a> 
+                <a href="login.html">Already have an account? Sign In</a> 
 
 
 
